--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
       }
 
       .bg {
+        /* background image positioning */
         background-image: url("bckgd.jpg");
-        height: 100%; 
+        height: 99.9%; 
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
